# fastapi-otel-prometheus

./: pyproject.toml
app/: __init__.py
app/routes/: health.py
app/telemetry/: __init__.py  prometheus.py  status_code_middleware.py
docker/: docker-compose.yml
docker/etc/: prometheus.yml
